--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechForge - College Technical Club for Hackathons</title>
-    <meta name="description" content="TechForge is a premier college technical club focused on building real-world projects for national and international hackathons. Join our community of innovators." />
-    <meta name="author" content="TechForge Club" />
+    <title>ArcShift - College Technical Club for Hackathons</title>
+    <meta name="description" content="ArcShift is a premier college technical club focused on building real-world projects for national and international hackathons. Join our community of innovators." />
+    <meta name="author" content="ArcShift Club" />
     <meta name="keywords" content="hackathon, technical club, college club, coding, programming, innovation, Microsoft, Google, hackathon projects" />
 
-    <meta property="og:title" content="TechForge - Where Innovation Meets Engineering" />
+    <meta property="og:title" content="ArcShift - Where Innovation Meets Engineering" />
     <meta property="og:description" content="Join the premier technical club dedicated to building real-world projects for national and international hackathons." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@TechForgeClub" />
+    <meta name="twitter:site" content="@ArcShiftClub" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
+    <link rel="icon" type="image/svg+xml" href="/arcshift-favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   </head>
